<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:id="@+id/lyParent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_building"
            android:adjustViewBounds="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_guy"
            android:layout_marginLeft="-30dp"
            android:layout_marginBottom="-65dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/main_margin"
        android:paddingTop="@dimen/main_margin_top"
        android:paddingRight="@dimen/main_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:src="@drawable/ic_logo" />

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:fontFamily="@font/roboto_medium"-->
                <!--android:padding="8dp"-->
                <!--android:text="Sign In"-->
                <!--android:textColor="@color/primary_text"-->
                <!--android:textSize="16sp" />-->

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="Email"
                    android:textColor="@color/primary_text" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/z_rounded_background"
                    android:hint="@string/hint_email_signin"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:paddingLeft="10dp"
                    android:paddingTop="13dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="13dp"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="Password"
                    android:textColor="@color/primary_text" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/z_rounded_background"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password_signin"
                        android:textSize="14sp"
                        android:paddingLeft="10dp"
                        android:paddingTop="13dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="13dp"
                        android:inputType="textNoSuggestions|textVisiblePassword"
                        android:layout_toLeftOf="@id/iv_show_password"
                        android:background="@null"
                        android:textColorHint="@color/colorAccent"
                        android:textColor="@color/colorAccent"/>

                    <ImageView
                        android:id="@+id/iv_show_password"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_hide"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="8dp"/>

                </RelativeLayout>

            </LinearLayout>

            <Button
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/gradient_button_bg"
                android:fontFamily="@font/montserrat_bold"
                android:text="Masuk"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_daftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="Daftar"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorAccent" />


                <TextView
                    android:id="@+id/tv_lupa_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="Lupa Password"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/tv_aktivasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="Aktivasi"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_fingerprint" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>